# pitfall_or_rtfm

./: .gitattributes  .gitignore  Cargo.toml  DEV_ARTICLE_README.md  FINAL_PRD_COMPLIANCE_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  README.md
.windsurf/rules/: prd_steering_rules.md  rust_optimization_rules.md
.windsurf/workflows/: execute_comprehensive_benchmarks.md  generate_final_report.md  implement_baseline_benchmarks.md  implement_optimized_benchmarks.md  setup_benchmark_project.md  validate_benchmark_correctness.md
benches/baseline/: compute_workloads.rs  io_workloads.rs  memory_workloads.rs  parallel_workloads.rs  parsing_workloads.rs
benches/optimized/: compute_workloads.rs  io_workloads.rs  memory_workloads.rs  parallel_workloads.rs  parsing_workloads.rs
data/: generate_data.rs
data/samples/: small_corpus.txt  small_data.csv  small_pairs.txt  small_records.jsonl  small_text.txt
docs/: prd.md
results/: comprehensive_analysis.md  executive_summary.md  statistical_analysis.md
scripts/: analyze_sample_results.py  compile_final_deliverable.sh  generate_missing_deliverables.sh  generate_statistical_analysis.py  restore_environment.sh  run_benchmarks.sh  setup_environment.sh  validate_correctness.sh
src/: validation.rs
tests/: correctness_validation.rs
